[tool.poetry]
name = "lab1tempnew"
version = "0.1.0"
description = ""
authors = ["ShivamArora99 <Shivam.Arora@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
